# serializer version: 1
# name: test_make_compat[office_356_custom_timezone]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  BEGIN:VEVENT
  DTSTAMP:20250508T124800Z
  UID:040000008200E00074C5B7101A82E0080000000032281124038FDA01000000000000000
   010000000BE5193C6B024BB458D91AD30FFFD71BF
  DTSTART;TZID=CET:20240502T110000
  DTEND;TZID=CET:20240502T120000
  SUMMARY:Zajęty
  CLASS:PUBLIC
  PRIORITY:5
  RRULE:FREQ=WEEKLY;UNTIL=20240502T090000Z;INTERVAL=2;BYDAY=TH
  SEQUENCE:46
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  END:VEVENT
  BEGIN:VEVENT
  DTSTAMP:20250508T124800Z
  UID:040000008200E00074C5B7101A82E0080000000088E248D3DC4EDA01000000000000000
   010000000FC71CD8C02E70C40B4D15EB1417E2150
  DTSTART;TZID=CET:20240521T150000
  DTEND;TZID=CET:20240521T160000
  SUMMARY:Wstępna akceptacja
  CLASS:PUBLIC
  PRIORITY:5
  RRULE:FREQ=WEEKLY;UNTIL=20260505T130000Z;INTERVAL=2;BYDAY=TU
  EXDATE;TZID=CET:20241231T150000
  EXDATE;TZID=CET:20250225T150000
  SEQUENCE:5
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  END:VEVENT
  BEGIN:VTIMEZONE
  TZID:Central European Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Eastern Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T020000
  TZOFFSETTO:-0500
  TZOFFSETFROM:-0400
  RRULE:FREQ=YEARLY;BYDAY=1SU;BYMONTH=11
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:-0400
  TZOFFSETFROM:-0500
  RRULE:FREQ=YEARLY;BYDAY=2SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Customized Time Zone
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=4SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:South Africa Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0200
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0200
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Greenwich Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Turkey Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0300
  TZOFFSETFROM:+0300
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0300
  TZOFFSETFROM:+0300
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:GMT Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T020000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T010000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0000
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:SE Asia Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0700
  TZOFFSETFROM:+0700
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0700
  TZOFFSETFROM:+0700
  END:DAYLIGHT
  END:VTIMEZONE
  END:VCALENDAR
  '''
# ---
# name: test_make_compat[office_365_extended_timezone]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  BEGIN:VEVENT
  DTSTAMP:20250417T155647Z
  UID:040000008200E00074C5B7101A82E00800000000687C546B5596DA01000000000000000
   010000000309AE93C8C3A94489F90ADBEA30C2F2B
  DTSTART;TZID=CET:20240426T140000
  DTEND;TZID=CET:20240426T150000
  SUMMARY:Uffe
  CLASS:PUBLIC
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  END:VEVENT
  END:VCALENDAR
  '''
# ---
# name: test_make_compat[office_365_invalid_timezone]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  BEGIN:VEVENT
  DTSTAMP:20250417T155647Z
  UID:040000008200E00074C5B7101A82E00800000000687C546B5596DA01000000000000000
   010000000309AE93C8C3A94489F90ADBEA30C2F2B
  DTSTART:20240426T140000
  DTEND:20240426T150000
  SUMMARY:Uffe
  CLASS:PUBLIC
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  END:VEVENT
  BEGIN:VTIMEZONE
  TZID:W. Europe Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:UTC
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:DAYLIGHT
  END:VTIMEZONE
  END:VCALENDAR
  '''
# ---
